--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
